# whale-watcher

./: .gitignore  README.md  docker-compose.yaml  main.py  pyproject.toml
config/: whales.yaml
scripts/: README.md  calculate_all_position_changes.py  check_apple_raw_values.py  check_database_status.py  debug_html_structure.py  fetch_one_filing.py  investigate_apple_position.py  populate_all_filings.py  query_position_changes.py  test_phase3_parser.py  test_phase4_end_to_end.py  validate_info_table_patterns.py
src/whale_watcher/: config.py
src/whale_watcher/clients/: sec_edgar.py
src/whale_watcher/database/: connection.py  models.py  schema.py
src/whale_watcher/etl/: analyzer.py  extractor.py  loader.py  parser.py
src/whale_watcher/utils/: logger.py
tests/: __init__.py  conftest.py  test_analyzer.py  test_config.py  test_connection.py  test_extractor.py  test_loader.py  test_logger.py  test_models.py  test_parser.py  test_sec_edgar_client.py
