[project]
name = "whale-watcher"
version = "0.1.0"
description = "Proof of concept for tracking institutional investor activity"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.3.3",
    "psycopg2-binary>=2.9.11",
    "pyyaml>=6.0.0",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.45",
    "xmltodict>=1.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]
